# algorithm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.ps1  config.ps1
source/: day1.hpp  day2.hpp  main.cpp
